--- a/react-app/package.json
+++ b/react-app/package.json
@@ -6,6 +6,10 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "cors": "2.8.5",
+    "express": "4.17.1",
+    "http-proxy-middleware": "0.19.1",
+    "mysql": "2.18.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
