--- a/node_server/package.json
+++ b/node_server/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -14,6 +14,7 @@
     "moment": "2.29.1",
     "moment-timezone": "0.5.32",
     "morgan": "~1.9.1",
-    "mysql": "2.18.1"
+    "mysql": "2.18.1",
+    "nodemon": "2.0.7"
   }
 }
