--- a/node_server/package.json
+++ b/node_server/package.json
@@ -10,11 +10,14 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-session": "1.17.1",
     "http-errors": "~1.6.3",
     "moment": "2.29.1",
     "moment-timezone": "0.5.32",
     "morgan": "~1.9.1",
     "mysql": "2.18.1",
-    "nodemon": "2.0.7"
+    "nodemon": "2.0.7",
+    "passport": "0.4.1",
+    "passport-google-oauth2": "0.2.0"
   }
 }
