--- a/react-app/package.json
+++ b/react-app/package.json
@@ -12,6 +12,7 @@
     "node-html-parser": "^2.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "4.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.1.0"
